2003-06-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/var_intr.h (cyg_hal_interrupt_acknowledge): Don't 
	inadvertently clear other interrupts when acknowledging the
	intended int. Reported by Mark Retallack.

2003-04-16  Gary Thomas  <gary@mlbassoc.com>

	* src/var_misc.c (hal_variant_init): Errata setup for MPC852T

2003-03-23  Gary Thomas  <gary@mlbassoc.com>

	* src/var_intr.c: 
	* include/var_intr.h: Clean up for new CDL (processor type) layout.

	* src/var_misc.c: 
	* include/var_cache.h: Better processor/variant support.

	* cdl/hal_powerpc_mpc8xx.cdl: Rearrange options to handle processor
	type more flexibly.

2003-03-06  Gary Thomas  <gary@mlbassoc.com>

	* src/var_misc.c: Can only reset CPM if not relying on a ROM monitor.

2003-03-05  Gary Thomas  <gary@mlbassoc.com>

	* src/var_misc.c (hal_variant_init): Reset CPM - always.

2003-03-05  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/variant.inc: Don't let FP be set in MSR in common HAL.
	Reported by Radu Cernea <rc@unusus.com>

2003-01-20  Gary Thomas  <gary@mlbassoc.com>

	* src/variant.S: Be careful about using QUICC functions unless that
	package is present (some MPC8xx platforms don't use it).

2003-01-18  Bart Veer  <bartv@ecoscentric.com>

	* src/variant.S: _mpc8xx_reset caused build failures with current
	tools.

2002-12-02  Gary Thomas  <gthomas@ecoscentric.com>

	* src/variant.S (_mpc8xx_reset): New function, used to cause a
	hardware reset of the platform.

2002-11-25  Gary Thomas  <gthomas@ecoscentric.com>

	* include/var_regs.h: Add CICR definitions.

2002-11-15  Gary Thomas  <gthomas@ecoscentric.com>

	* src/var_misc.c: Change in API for profile callback.

2002-11-14  Gary Thomas  <gthomas@ecoscentric.com>

	* src/var_misc.c: 
	* cdl/hal_powerpc_mpc8xx.cdl: Add support for profiling.

2002-11-13  Gary Thomas  <gthomas@ecoscentric.com>

	* include/var_cache.h (HAL_DCACHE_WRITE_MODE): Define for support
	of various modes (copyback/writethru)
